--- a/Src/Tests/CMakeLists.txt
+++ b/Src/Tests/CMakeLists.txt
@@ -1,11 +1,11 @@
 cmake_minimum_required(VERSION 3.15)
 project(Tests)
 
-set(CMAKE_C_STANDARD 99)
+set(CMAKE_CXX_STANDARD 11)
 
 add_subdirectory(lib)
 include_directories(${gtest_SOURCE_DIR}/include ${gtest_SOURCE_DIR})
 
-add_executable(Test  Test_main.cpp)
+add_executable(Test  Test_main.cpp Argument_Manager/Argument_Manager_Test.cpp)
 
 target_link_libraries(Test gtest gtest_main)
