--- a/Src/Tests/CMakeLists.txt
+++ b/Src/Tests/CMakeLists.txt
@@ -6,6 +6,6 @@ set(CMAKE_CXX_STANDARD 11)
 add_subdirectory(lib)
 include_directories(${gtest_SOURCE_DIR}/include ${gtest_SOURCE_DIR})
 
-add_executable(Test  Test_main.cpp Argument_Manager/Argument_Manager_Test.cpp)
+add_executable(Test  Test_main.cpp Argument_Manager_Test.cpp Date_Test.cpp Patients_List_Test.cpp)
 
 target_link_libraries(Test gtest gtest_main)
