--- a/Src/Tests/lib/googlemock/test/BUILD.bazel
+++ b/Src/Tests/lib/googlemock/test/BUILD.bazel
@@ -67,7 +67,7 @@ py_test(
     name = "gmock_leak_test",
     size = "medium",
     srcs = ["gmock_leak_test.py"],
-    data = [
+    arg_data = [
         ":gmock_leak_test_",
         ":gmock_test_utils",
     ],
@@ -94,7 +94,7 @@ py_test(
     name = "gmock_output_test",
     size = "medium",
     srcs = ["gmock_output_test.py"],
-    data = [
+    arg_data = [
         ":gmock_output_test_",
         ":gmock_output_test_golden.txt",
     ],
